--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,23 @@
 body {
     margin: 0;
     background: #0B2434;
+    padding: 20px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+} 
+
+div#root {
+    height: 100%;
+    width: 100%;
+    max-height: 400px;
+    max-width: 400px;
 }
 
+main {
+    background-color: #F5F5F5;
+    height: 300px;
+    border-radius: 5px;
+}
