--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,22 @@
 }
 
 body {
+    font-family: Karla, sans-serif;
     margin: 0;
-    background: #0B2434;
+    background-color: #0B2434;
     padding: 20px;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-} 
+}
 
 div#root {
     height: 100%;
     width: 100%;
     max-height: 400px;
-    max-width: 400px; 
+    max-width: 400px;
 }
 
 main {
@@ -26,7 +27,7 @@ main {
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -36,6 +37,11 @@ main {
     gap: 20px;
 }
 
+button {
+    font-family: Karla, sans-serif;
+    cursor: pointer;
+}
+
 .dice-container button {
     height: 50px;
     width: 50px;
@@ -43,9 +49,16 @@ main {
     border-radius: 10px;
     border: none;
     background-color: white;
-    font-family: Inter, sans-serif;
     font-size: 1.75rem;
     font-weight: bold;
-    cursor: pointer;
 }
 
+button.roll-dice {
+    height: 50px;
+    width: 100px;
+    border: none;
+    border-radius: 6px;
+    background-color: #5035FF;
+    color: white;
+    font-size: 1.2rem;
+}
